テスト環境修正